fix code smells
Signed-off-by: dikel <dikelito@tutamail.com>